--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/xxx
-    username: xxxx
-    password: xxxx
+    url: jdbc:mysql://127.0.0.1:3306/CPS_COMMON
+    username: root
+    password: 123456
 
 # mybatis-plus相关配置
 mybatis-plus:
