--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.66</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.javaparser</groupId>
+            <artifactId>javaparser-core</artifactId>
+            <version>3.18.0</version> <!-- 根据实际情况选择版本 -->
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
